# pmc-cli

./: .SRCINFO  .gitignore  PKGBUILD  README.md  pmc-tool-0.1.0.r22.g1a68170-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: ci.yml  package-drift.yml  release.yml  weekly-rebuild.yml
src/pmc-tool-0.1.0/: PROJECT_OUTLINE.md
src/pmc-tool-0.1.0/src/pmc_tool/: config.py  http.py
src/pmc_tool/: articles_api.py  cli.py  config.py  core.py  grants_api.py  http.py
tests/: test_cli.py  test_config.py  test_core.py
