[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pmc-tool"
version = "0.1.0"
description = "Europe PMC CLI for fielded literature search"
requires-python = ">=3.11"

[project.scripts]
pmc = "pmc_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
