[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pmc-cli"
version = "0.1.0"
description = "Europe PMC CLI for fielded literature search"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.13"

[project.scripts]
pmc = "pmc_tool.cli:main"

[dependency-groups]
dev = [
    "build>=1.2.2",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
files = ["src/pmc_tool"]
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = false
